# football-rag-intelligence

./: .claudeignore  .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  Dockerfile  MLOPS_BEST_PRACTICES_STRUCTURE.md  Makefile  PATTERNS.md  PHASE1_COMPLETION_PLAN.md  README.md  README_HF.md  SCRATCHPAD.md  app.py  docker-compose.yml  pyproject.toml  pyproject.toml.backup  requirements.txt  submission.txt  workspace.yaml
.claude/: ARCHITECTURE.md  SCRATCHPAD.md  lessons.md
.github/workflows/: matchday_pipeline.yml
.streamlit/: config.toml
archive/: submission.txt
archive/notebooks/: extended_scraping.ipynb  scraping_test.ipynb
archive/scripts/: debug_fotmob_api.py  debug_whoscored_calendar.py  list_minio_buckets.py  upload_chromadb.py  upload_chromadb_v2.py  upload_raw_data.py
confs/: football_rag_config.yaml
data/chroma/: chroma.sqlite3
data/processed/: matches_gold.json
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/: sources.yml
docs/: checkpoint_hf_spaces_fix_26102025.md  motherduck-setup.md
docs/architecture/: DATA_ARCHITECTURE_EXPLAINED.md  V2_MIGRATION_STATUS.md  infrastructure.md  overview.md
docs/archive/: MENTORSHIP_NOTES.md
docs/assets/: phase1-pipeline-architecture.excalidraw
docs/engineering_diary/: 2026-02-01_playwright_migration.md  2026-02-03_dagster_connectivity_verification.md  2026-02-07-scraping-feature.md  2026-02-08-minio-stability-fix.md  2026-02-14-phase1-diagnosis.md  2026-02-15-phase1-silver-layer-complete.md  2026-02-16-phase1-complete.md  2026-02-19-phase1-ci-green.md  2026-02-19-phase1-motherduck-complete.md  2026-02-21-phase2-rag-engine.md  2026-02-22-phase3a-edd-debugging.md  2026-02-22-phase3a-opik-edd.md  (+6 more)
ops/: Dockerfile  dagster.yaml  start_dagster_daemon.sh  workspace.yaml
orchestration/: defs.py  schedules.py
prompts/: README.md  profile_football_v1.yml  prompt_versions.yaml  results1.md  sample_match_heracles_vs_pec.txt  tactical_analysis_v1_baseline.txt  v3.5_console_test.md  v3_console_test.md
scripts/: README.md  check_data_status.py  count_matches.py  count_whoscored_matches.py  create_match_mapping.py  eval_multi_provider.py  evaluate_full_dataset.py  extract_viz_metrics.py  find_fotmob_match_ids.py  fix_embeddings.py  generate_eval_match_selector.py  generate_local_match_mapping.py  generate_match_mapping.py  identify_fotmob_gaps.py  inspect_chroma.py  inspect_data.py  materialize_embeddings.py  migrate_csv_to_minio.py  process_raw_data.py  quick_eval_providers.py  rebuild_chromadb.py  refresh_eval_golden.py  rescrape_fotmob_matches.py  scrape_all_matches.py  select_diverse_matches.py  setup_chromadb_miniLM.py  test_duckdb_vss.py  test_rag.py  test_vector_search.py  upload_chromadb_to_hf.py  validate_tactical_rules.py  visualizers.py
tests/: conftest.py  eval_mini.py  evaluate_pipeline.py  llamaindex_evaluation_standalone.py  test_duckdb_pipeline.py  test_edd.py  test_evaluation.py  test_fotmob_scraper.py  test_llamaindex_setup.py  test_metrics.py  test_minio_client.py  test_multi_provider.py  test_phase1_pipeline.py  test_quick_eval.py  test_rag_pipeline.py  test_rag_simplified.py  test_retrieval.py  test_router_simple.py  test_scrapers.py  test_scraping_logic.py  test_vectorstore.py  test_viz_tools.py  test_whoscored_scraper.py  visualizers_standalone.py
(+78 files in other folders)
