[project]
name = "football-rag"
version = "0.1.0"
description = "AI-Powered Football Scouting Intelligence with RAG"
authors = [{name = "Ricardo", email = "ricardo@example.com"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "gradio>=4.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.17.0",
    "matplotlib>=3.7.0",
    "invoke>=2.2.0",
    "ruff>=0.12.12",
]

[project.scripts]
football-rag = "football_rag.scripts:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/football_rag"]
