[project]
name = "football-rag"
version = "0.1.0"
description = "AI-Powered Football Scouting Intelligence with RAG"
authors = [{name = "Ricardo", email = "ricardo@example.com"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "gradio>=4.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "pandas>=2.0.0",
    "numpy<2",
    "plotly>=5.17.0",
    "matplotlib>=3.7.0",
    "invoke>=2.2.0",
    "ruff>=0.12.12",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
    "duckdb>=0.9.0",
    "pyarrow>=14.0.0",
    "anthropic>=0.25.0",
    "openai>=1.3.0",
    "google-generativeai>=0.3.0",
    # "sentence-transformers>=2.2.0",  # Removed - ChromaDB handles embeddings
    "huggingface-hub>=0.20.0",
    "python-dotenv>=1.0.0",
    "dagster>=1.6.0",
    "dagster-webserver>=1.6.0",
    "dagster-postgres>=0.22.0",
    "dagster-aws>=0.22.0",
    "dagster-docker>=0.22.0",
    "dbt-duckdb>=1.10.0",
    "dagster-dbt>=0.28.13",
]

[project.scripts]
football-rag = "football_rag.scripts:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/football_rag"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.0",
    "pytest-playwright>=0.4.0",
]
